wskaznik do funkcji, wskaznik do tablicy wskaznikow do funkcji

--- a/notatki_cpp.vcxproj.filters
+++ b/notatki_cpp.vcxproj.filters
@@ -195,5 +195,8 @@
     <ClCompile Include="recursive_main.cpp">
       <Filter>Pliki źródłowe\other</Filter>
     </ClCompile>
+    <ClCompile Include="pointers_to_functions.cpp">
+      <Filter>Pliki źródłowe\pointers</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
